# usb_communication

./: README.txt
document/: device.md  general.md
usb_device/: config.status  configure.ac
usb_device/example/: chat.c  usb_device.c
usb_device/include/: usb_dc.h  usbdc.h  usbdc_stream.h
usb_device/src/: device_test_stream.c  test_stream.c
usb_device/src/usb/: device_dec.c  device_handle.c  device_line.c  device_package.c  device_timeout.c  usb_line.c  usbdc_buff.c  usbdc_dec.c  usbdc_handle.c  usbdc_package.c  usbdc_timeout.c
usb_device/src/usb_stream/: device_connect.c  device_stream.c  usbdc_stream.c
usb_host/: Makefile  config.status  configure.ac
usb_host/include/: usb_dc.h  usbdc.h  usbdc_stream.h
usb_host/src/: host_stream.c  test_stream.c  usb_host.c
usb_host/src/usb_stream/: host_stream.c  usbdc_stream.c
usb_host/src/usbdc/: host_block.c  host_handle.c  host_line.c  host_package.c  host_timeout.c  usbdc_buff.c  usbdc_host_handle.c  usbdc_host_line.c  usbdc_timeout.c
